k3s/miniflux/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: miniflux
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux-db
  namespace: miniflux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miniflux-db
  template:
    metadata:
      labels:
        app: miniflux-db
    spec:
      containers:
        - name: postgres
          image: postgres:17.4
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: miniflux-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux-db
  namespace: miniflux
spec:
  selector:
    app: miniflux-db
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  namespace: miniflux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
        - name: miniflux
          image: miniflux/miniflux:2.2.5
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: miniflux
spec:
  selector:
    app: miniflux
  ports:
    - port: 8080
