k3s/miniflux/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: miniflux
  namespace: miniflux
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`rss.homelab.local`)
      services:
        - name: miniflux
          port: 8080
  tls:
    certResolver: cloudflare
